--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,3 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>Welcome to drones</h1>
+<a href="/drones">Learn more</a>
+<a href="/drones/create">Add a new one</a>
